WIP for Domos maps

--- a/DOMOS_maps.ipynb
+++ b/DOMOS_maps.ipynb
@@ -106,7 +106,7 @@
     "geo_json = gpd.read_file(file)\n",
     "world_url = geodatasets.get_url(\"naturalearth land\")\n",
     "\n",
-    "world = gpd.read_file(geodatasets.get_url(\"naturalearth land\"))\n",
+    "world = gpd.read_file(world_url)\n",
     "\n",
     "# df_wm = geo_json.to_crs(epsg=3857)\n",
     "# ax = df_wm.plot(figsize=(10, 10), alpha=0.5, edgecolor=\"k\")\n",
